# PrettYharmonize

./: .gitignore  Harmonization_example_iris.py  JuHa.py  JuHarm.py  PrettYharmonize_usage_example.ipynb  README.md  pyproject.toml  run_JuHa.py  run_JuHaCV.py  setup.py  test_JuHa.py  test_JuHaCV.py  test_JuHarm.py  test_JuHarmCV.py
juha/: JuHa.py  __init__.py  _version.py  utils.py
juha/tests/: test_JuHa.py
juharmonize/: JuHarmonize.py  JuHarmonizeCV.py  __init__.py  juharmonize.py  juharmonizeclassifier.py  juharmonizecv.py  juharmonizepredictor.py  juharmonizepredictorcv.py  juharmonizeregressor.py  logging.py  modelstorage.py  utils.py
juharmonize/tests/: test_JuHarmonize.py  test_juharmonizepredictor.py  test_modelstorage.py
prettyharmonize/: __init__.py  logging.py  modelstorage.py  prettyharmonize.py  prettyharmonizeclassifier.py  prettyharmonizecv.py  prettyharmonizepredictor.py  prettyharmonizepredictorcv.py  prettyharmonizeregressor.py  utils.py
prettyharmonize/tests/: test_JuHarmonize.py  test_PrettYharmonize.py  test_juharmonizeclassifier.py  test_juharmonizepredictor.py  test_modelstorage.py  test_prettyharmonizeclassifier.py  test_prettyharmonizepredictor.py
tests/: test_GMV_Sex_Age.py  test_all_data_parallel.py
