[build-system]
requires = [
  "setuptools >= 61.0.0",
  "wheel",
  "setuptools_scm[toml] >= 6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "JuHarmonize"
description = "JUelich Harmonization"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
authors = [
    {email = "f.raimondo@fz-juelich.de"},
    {name = "Fede Raimondo"}
]
keywords = [
    "neuroimaging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Natural Language :: English",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy>=1.21,<1.23",
    "julearn>=0.2",
    "pandas>=1.4.0,<1.5",
]
dynamic = ["version"]

[project.urls]
homepage = "https://juaml.github.io/"
documentation = "https://juaml.github.io/"
repository = "https://github.com/juaml/Harmonization_no_target"

[project.optional-dependencies]
dev = ["pytest"]
docs = [
    "seaborn>=0.11.2,<0.12",
    "Sphinx>=5.0.2,<5.1",
    "sphinx-gallery>=0.10.1,<0.11",
    "sphinx-rtd-theme>=1.0.0,<1.1",
    "sphinx-multiversion>=0.2.4,<0.3",
    "numpydoc>=1.4.0,<1.5",
    "julearn==0.2.5"
]

################
# Tool configs #
################

[tool.setuptools]
packages = ["juharmonize"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
write_to = "juharmonize/_version.py"

[tool.black]
line-length = 79
target-version = ["py38"]
